# EtherNetIPLibrary

./: settings.gradle
ethernetiplibrary/: build.gradle
ethernetiplibrary/src/androidTest/java/com/omnixone/ethernetiplibrary/: ExampleInstrumentedTest.java
ethernetiplibrary/src/main/: AndroidManifest.xml
ethernetiplibrary/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  native-lib.cpp
ethernetiplibrary/src/main/cpp/opener/: jni_bridge.h
ethernetiplibrary/src/main/cpp/opener/cip/: cipclass3connection.h  cipconnectionobject.h  ciptypes.h
ethernetiplibrary/src/main/cpp/opener/enet_encap/: encap.h
ethernetiplibrary/src/main/cpp/opener/ports/: devicedata.h
ethernetiplibrary/src/main/cpp/opener/ports/POSIX/sample_application/: sampleapplication.c
ethernetiplibrary/src/main/cpp/opener/utils/: doublylinkedlist.h
ethernetiplibrary/src/main/java/com/omnixone/ethernetiplibrary/: CppDataListener.java  EtherNetIPLibrary.java  OpenerIdentity.java
ethernetiplibrary/src/main/java/com/omnixone/modbuslibrary/: Modbus.java  ModbusException.java  ModbusIOException.java  ModbusSlaveException.java
ethernetiplibrary/src/main/java/com/omnixone/modbuslibrary/android/: AndroidUsbSerialConnection.java  AndroidUsbSerialPortIo.java  UsbSerialPortOpener.java
ethernetiplibrary/src/main/java/com/omnixone/modbuslibrary/facade/: AbstractModbusMaster.java  ModbusSerialMaster.java  ModbusTCPMaster.java  ModbusUDPMaster.java
ethernetiplibrary/src/main/java/com/omnixone/modbuslibrary/io/: AbstractModbusTransport.java  AbstractSerialTransportListener.java  BytesInputStream.java  BytesOutputStream.java  FastByteArrayInputStream.java  FastByteArrayOutputStream.java  ModbusASCIITransport.java  ModbusRTUTCPTransport.java  ModbusRTUTransport.java  ModbusSerialTransaction.java  ModbusSerialTransport.java  ModbusTCPTransaction.java  ModbusTCPTransport.java  ModbusTransaction.java  ModbusUDPTransaction.java  ModbusUDPTransport.java  NonWordDataHandler.java
ethernetiplibrary/src/main/java/com/omnixone/modbuslibrary/modbuscontroller/: ModbusTcpSlaveManager.java  (+1 more)
ethernetiplibrary/src/main/res/values/: strings.xml  themes.xml
ethernetiplibrary/src/main/res/values-night/: themes.xml
ethernetiplibrary/src/test/java/com/omnixone/ethernetiplibrary/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+92 files in other folders)
